--- a/client/package.json
+++ b/client/package.json
@@ -13,10 +13,14 @@
     "@thirdweb-dev/sdk": "^4",
     "ethers": "^5",
     "react": "^18.2",
-    "react-dom": "^18.2"
+    "react-dom": "^18.2",
+    "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^2",
+    "autoprefixer": "^10.4.18",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1",
     "vite": "^3",
     "vite-plugin-node-polyfills": "^0.7.0"
   }
